# agbr

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FileBaseList.cmake
demo/: CMakeLists.txt
demo/mvp_matrix/: mvp_mat.cpp
demo/tutorial_basic/: draw_point.h  draw_triangle.h  tutorial_basic.cpp
github.com/mcinglis/libpp/: Package.json  README.md  args.h  call.h  concat.h  count.h  foldl.h  foldr.h  intersperse.h  macros.h  map-lists.h  map-pairs.h  map.h  paren.h  separators.h  stringify.h  zip.h
github.com/mcinglis/libpp/templates/: args.h  call.h  count.h  foldl.h  foldr.h  intersperse.h  map-lists.h  map-pairs.h  map.h  render.py  zip.h
github.com/mcinglis/libpp/tests/: call.in.c  call.out.c  foldl.in.c  foldl.out.c  foldr.in.c  foldr.out.c  intersperse.in.c  intersperse.out.c  map-lists.in.c  map-lists.out.c  map-pairs.in.c  map-pairs.out.c  map.in.c  map.out.c  realistic.in.c  realistic.out.c  stringify.in.c  zip.in.c  zip.out.c
maths/: vertex.h
opengl/: README.md
opengl/example/: CMakeLists.txt  helloworld.cpp  text.cpp  vertex.cpp
